# bevy_demo

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
demo/: lib.rs  te.rs
game_of_life/: Cargo.toml  readme.md
game_of_life/src/: basic.rs  main.rs  ui.rs
minifootball/: Cargo.toml  readme.md
minifootball/src/: input.rs  lib.rs  main.rs  unitys.rs  word.rs
snake/: Cargo.toml  assets
snake/src/: lib.rs  main.rs  snake.rs  ui.rs
src/: basic.rs  main.rs
