[package]
name = "minifootball"
version = "0.1.0"
edition = "2021"
publish = ["crates-io"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version="0.12"}
bevy_editor_pls = "0.6"
bevy_egui = "0.23"
bevy_rapier2d = "0.23"
rand = "0.8"

[dev.dependencies]
bevy = {version="0.12",features = ["dynamic_linking"]}